underscore not needed

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "tellstick": "1.0.1",
-    "node-schedule": "^0.2.9",
-    "underscore": "*"
+    "node-schedule": "^0.2.9"
   },
   "scripts": {
     "test": "mocha --reporter spec --bail"
